temporarily adjust layouts so they work with old version of loader

--- a/layouts/split_40.yaml
+++ b/layouts/split_40.yaml
@@ -72,7 +72,7 @@ layouts:
         [ # offset 1 (right)
           '^' , '&' , '*' , '(' , ')' , ____,
           F6  , '_' , '+' , '{' , '}' , '|' ,
-          F12 , iso~, iso|, home, end , ____,
+          F12 , ____, ____, home, end , ____,
           ____, L3  , ____, ____, ____, ____,
         ]
       ],
@@ -86,7 +86,7 @@ layouts:
         [ # offset 1 (right)
            6  ,  7  ,  8  ,  9  ,  0  , ____,
           F6  , '-' , '=' , '[' , ']' , '\' ,
-          F12 , iso#, iso|, pgup, pgdn, ____,
+          F12 , ____, ____, pgup, pgdn, ____,
           ____, ____, ____, ____, ____, ____,
         ]
       ],
