clean up building of different boards

--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -3,13 +3,19 @@
 
 # TODO: build system needs cleanup for building for different hardware
 
-MCU = atxmega32a4u
-# MCU = atxmega64a4u
-# MCU = atxmega128a4u
+#######################################################################
+#                        global build defines                         #
+#######################################################################
+
+
 ARCH = XMEGA
 
-# Target file name (without extension).
-TARGET = xmega_keyboard
+F_CPU = 32000000
+F_USB = 48000000
+
+# The clock speed to use when we are running on battery power (12MHz).
+# We use 12MHz for battery mode because speeds >12MHz require voltage >1.8V
+CLOCK_SPEED_SLOW = 12000000
 
 # Output format. (can be srec, ihex, binary)
 FORMAT = ihex
@@ -26,34 +32,29 @@ VPATH += $(XMEGA_PATH)
 INC_PATHS += \
 	-I$(BASE_PATH)
 
-VID = 6666
-PID = 1111
-F_CPU = 32000000
-F_USB = 48000000
+#######################################################################
+#                        board config options                         #
+#######################################################################
 
-FLASH_SIZE = FLASH_16
+# Note: Specific board configs are stored in the `boards` directory.
 
-USE_USB := 1
-USE_SCANNER := 1
-USE_NRF24 := 1
-USE_CHECK_PIN := 1
-USE_I2C := 1
-USE_HARDWARE_SPECIFIC_SCAN := 0
-
-# CFLAGS += -DKEYPLUS_MINI_TESTING
-
-ifeq ($(USE_CHECK_PIN), 1)
-CFLAGS += -DUSE_CHECK_PIN=1
+ifndef BOARD
+  include boards/default/config.mk
+  TARGET = xmega_keyplus
+else ifneq ("$(wildcard boards/$(BOARD)/config.mk)","")
+  include boards/$(BOARD)/config.mk
+  TARGET = xmega_keyplus_$(BOARD)
 else
-CFLAGS += -DUSE_CHECK_PIN=0
+  $(error "Unknown board $(BOARD)")
 endif
 
-CFLAGS += -DNRF24_CE_PORT=PORTR
-CFLAGS += -DNRF24_CE_PIN=PIN0_bm
+ifndef MCU
+  MCU = atxmega32a4u
+endif
 
-# The clock speed to use when we are running on battery power (12MHz).
-# We use 12MHz for battery mode because speeds >12MHz require voltage >1.8V
-CLOCK_SPEED_SLOW = 12000000
+#######################################################################
+#                        common build settings                        #
+#######################################################################
 
 include $(BASE_PATH)/core/core.mk
 include $(BASE_PATH)/usb/usb.mk
@@ -63,8 +64,18 @@ include $(XMEGA_PATH)/xusb/makefile
 include $(XMEGA_PATH)/xusb/xmega/makefile
 include $(XMEGA_PATH)/hardware/hardware.mk
 
+#######################################################################
+#                         programmer options                          #
+#######################################################################
+
+# AVRDUDE_CMD=avrdude-pdi -C ~/local/etc/avrdude-pdi.conf -c usbasp -p $(AVRDUDE_PART)
+AVRDUDE_CMD=avrdude -p $(AVRDUDE_PART) -c avrispmkII
+
+#######################################################################
+#                             c settings                              #
+#######################################################################
+
 CFLAGS += $(INC_PATHS)
-CFLAGS += -D$(FLASH_SIZE)
 CFLAGS += -Wno-error=unused-variable
 CFLAGS += -Wno-error=unused-but-set-variable
 
@@ -88,6 +99,43 @@ C_SRC += $(SRC_USB) \
 	usb_reports.c \
 	ws2812.c \
 
+# List Assembler source files here.
+# NOTE: Use *.S for user written asm files. *.s is used for compiler generated
+ASM_SRC =
+
+# Optimization level, can be [0, 1, 2, 3, s].
+OPT = s
+
+# List any extra directories to look for include files here.
+EXTRAINCDIRS = $(XMEGA_PATH)/
+
+# Compiler flag to set the C Standard level.
+CSTANDARD = -std=gnu99
+
+# Place -D or -U options here for C sources
+CDEFS += -DCLOCK_SPEED_SLOW=$(CLOCK_SPEED_SLOW)UL
+CDEFS += -DF_CPU=$(F_CPU)UL
+CDEFS += -DF_USB=$(F_USB)UL
+CDEFS += -DBOARD=BOARD_$(BOARD) -DARCH=ARCH_$(ARCH)
+CDEFS += $(USB_OPTS)
+CDEFS += -D'HW_VERSION=$(HW_VERSION)'
+CDEFS += -D'FW_VERSION=$(FW_VERSION)'
+
+# Place -D or -U options here for ASM sources
+ADEFS  = -DF_CPU=$(F_CPU)
+ADEFS += -DF_USB=$(F_USB)UL
+ADEFS += -DBOARD=BOARD_$(BOARD)
+ADEFS += $(USB_OPTS)
+
+#
+ifdef ID
+  CDEFS += -DDEVICE_ID=$(ID)
+endif
+
+#######################################################################
+#                          optional imports                           #
+#######################################################################
+
 ifeq ($(USE_I2C), 1)
 	C_SRC += wired.c
 endif
@@ -97,21 +145,13 @@ ifeq ($(USE_NRF24), 1)
 	C_SRC += nrf24.c
 endif
 
-# List Assembler source files here.
-# NOTE: Use *.S for user written asm files. *.s is used for compiler generated
-ASM_SRC =
+CDEFS += -DUSE_CHECK_PIN=$(USE_CHECK_PIN)
 
-
-# Optimization level, can be [0, 1, 2, 3, s].
-OPT = s
-
-# List any extra directories to look for include files here.
-EXTRAINCDIRS = $(XMEGA_PATH)/
+#######################################################################
+#                   xmega flash and memory settings                   #
+#######################################################################
 
 FUSE_SECTION_START=0x08F0020
-
-# Compiler flag to set the C Standard level.
-CSTANDARD = -std=gnu99
 
 # see avr-gcc for information on avrxmega2, avrxmega4, etc
 # NOTE: haven't tested on all these chips
@@ -162,65 +202,11 @@ CDEFS += -DSETTINGS_ADDR=$(SETTING_ADDR)
 CDEFS += -DLAYOUT_ADDR=$(LAYOUT_ADDR)
 CDEFS += -DLAYOUT_SIZE=$(LAYOUT_SIZE)
 
-# Place -D or -U options here for C sources
-CDEFS += -DCLOCK_SPEED_SLOW=$(CLOCK_SPEED_SLOW)UL
-CDEFS += -DF_CPU=$(F_CPU)UL
-CDEFS += -DF_USB=$(F_USB)UL
-CDEFS += -DBOARD=BOARD_$(BOARD) -DARCH=ARCH_$(ARCH)
-CDEFS += $(USB_OPTS)
-CDEFS += -D'HW_VERSION=$(HW_VERSION)'
-CDEFS += -D'FW_VERSION=$(FW_VERSION)'
-
-# Place -D or -U options here for ASM sources
-ADEFS  = -DF_CPU=$(F_CPU)
-ADEFS += -DF_USB=$(F_USB)UL
-ADEFS += -DBOARD=BOARD_$(BOARD)
-ADEFS += $(USB_OPTS)
+#######################################################################
+#                              recepies                               #
+#######################################################################
 
 all: hex fuse lock
-
-# program the device using the bootloader
-
-
-# Pin E2 is used on keyplus mini
-keyplus_mini: CFLAGS += -DCHECK_PIN=PIN2_bm
-keyplus_mini: CFLAGS += -DCHECK_PORT=PORTE
-keyplus_mini: CFLAGS += -DVBUS_PIN_INT0_VECT=PORTE_INT0_vect
-keyplus_mini: hex
-
-
-build-0: clean
-build-0: CDEFS += -DDEVICE_ID=0
-build-0: keyplus_mini
-
-build-1: clean
-build-1: CDEFS += -DDEVICE_ID=1
-build-1: keyplus_mini
-
-build-2: clean
-build-2: CDEFS += -DDEVICE_ID=2
-build-2: keyplus_mini
-
-xmega_test_board: CFLAGS += -DCHECK_PIN=PIN1_bm
-xmega_test_board: CFLAGS += -DCHECK_PORT=PORTR
-xmega_test_board: CFLAGS += -DVBUS_PIN_INT0_VECT=PORTR_INT0_vect
-xmega_test_board: CFLAGS += -DTESTING_PIN_TGL=0
-xmega_test_board: hex
-
-build-10: clean
-build-10: CDEFS += -DDEVICE_ID=10
-build-10: xmega_test_board
-
-build-11: clean
-build-11: CDEFS += -DDEVICE_ID=11
-build-11: xmega_test_board
-
-program-0: build-0 program-boot
-program-1: build-1 program-boot
-program-2: build-2 program-boot
-
-program-10: build-10 program-boot
-program-11: build-11 program-boot
 
 program: hex program-boot
 
@@ -228,18 +214,17 @@ program: hex program-boot
 program-boot: $(TARGET).hex
 	./scripts/flash_hex.sh $<
 
-
 # program a board that is already in in bootloader mode
 program-boot-2: $(TARGET).hex
 	./xusb-boot/scripts/flash.py -f $<
 
 # program a board using an external programmer
 program-hard: $(TARGET).hex
-	avrdude-pdi -C ~/local/etc/avrdude-pdi.conf -c usbasp -p x32a4 -U flash:w:$<:i -E noreset
+	$(AVRDUDE_CMD) -U flash:w:$<:i -E noreset
 
-
-$(TARGET).fuse: $(TARGET).elf
-	avr-objcopy -O $(FORMAT) -j .fuse --change-section-lma .fuse=$(FUSE_SECTION_START) $< $@
+#######################################################################
+#                     fuse and lock bit settings                      #
+#######################################################################
 
 # fuse options, see fuses.c (fuses values generated in $(TARGET).fuse)
 
@@ -253,7 +238,7 @@ FUSE4 = FF
 FUSE5 = D6
 
 program-fuses:
-	avrdude-pdi -C ~/local/etc/avrdude-pdi.conf -c usbasp -p x32a4 \
+	$(AVRDUDE_CMD) \
 		-U fuse0:w:0x$(FUSE0):m \
 		-U fuse1:w:0x$(FUSE1):m \
 		-U fuse2:w:0x$(FUSE2):m \
@@ -264,9 +249,13 @@ program-fuses:
 LOCKBITS_DEBUG := BF # RW enabled for external programmer
 LOCKBITS_RELEASE := BC # RW disabled for external programmer
 LOCKBITS = $(LOCKBITS_RELEASE)
+
 program-lock:
-	avrdude-pdi -C ~/local/etc/avrdude-pdi.conf -c usbasp -p x32a4 \
-		-U lock:w:0x$(LOCKBITS):m \
+	$(AVRDUDE_CMD) -U lock:w:0x$(LOCKBITS):m \
+
+# extract the fuse section from the elf file
+$(TARGET).fuse: $(TARGET).elf
+	avr-objcopy -O $(FORMAT) -j .fuse --change-section-lma .fuse=$(FUSE_SECTION_START) $< $@
 
 -include avr.mk
 
