--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nrf24lu1/nrf24lu1p-512-bootloader"]
 	path = nrf24lu1/nrf24lu1p-512-bootloader
 	url = https://github.com/ahtn/nrf24lu1p-512-bootloader
+[submodule "xmega/avr-makefile"]
+	path = xmega/avr-makefile
+	url = https://github.com/ahtn/avr-makefile
