Use ring buffer for receiving rf packets
Note: seems to be working, but some of the asserts are failing
somewhere, so asserts need to be disabled for the momemnt to get it to
work (i.e. NDEBUG defined).

--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -131,6 +131,10 @@ endif
 
 CDEFS += -DUSE_CHECK_PIN=$(USE_CHECK_PIN)
 
+ifdef NO_DEBUG
+  CDEFS += -DNDEBUG
+endif
+
 #######################################################################
 #                   xmega flash and memory settings                   #
 #######################################################################
